# stdext

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/stdext/: call_release_func  compiler_compat  enum_to_string  error  exception_absorb  fs  stdext  unique_container_ptr  uuid
lib/: call_release_func.cpp  error.cpp  exception_absorb.cpp  fs.cpp  stdext_compiler_id.cpp  uuid.cpp
src/: README.md
src/include/stdext/: call_release_func  compiler_support  enum_to_string  error  exception_absorb  unique_container_ptr  uuid
src/lib/: call_release_func.cpp  error.cpp  exception_absorb.cpp  uuid.cpp
test/main/: main.cpp
